--- a/src/components/styles/product.css
+++ b/src/components/styles/product.css
@@ -1,26 +1,32 @@
 .product{
-    border: 2px solid black;
+    border: 1px solid black;
     display: inline-block;
     width: 240px;
     height: 320px;
     margin: 5px 7px;
     border-radius: 4px;
-    background-color: rgb(99, 86, 173);
+    background-color: aliceblue;
     padding: 10px;
 }
 
-.product img{
-    margin-bottom: 30px;
-}
-
 .product:hover{
-    border-color: green;
+    border-color: rgb(180, 60, 20);
 }
-
 .product .prices{
-    display:flex;
+    display: flex;
+}
+.product .prices label{
+    flex: 1;
 }
 .product img{
     width: 200px;
-    height: 180;
+    height: 180px;
+}
+
+@media (max-width: 400px) {
+    .product{
+        width: 85%;
+        margin-left: 2%;
+        height: auto;
+    }
 }
