--- a/src/components/styles/quantityPicker.css
+++ b/src/components/styles/quantityPicker.css
@@ -6,11 +6,11 @@
 
 .qt-picker button{
     padding: 10px 10px;
-    background-color: aquamarine;
+    background-color: rgb(93, 116, 108);
     border: 1px solid gray;
 }
 
 .qt-picker button:hover{
     cursor: pointer;
-    background-color: aqua;
+    background-color: rgb(255, 208, 0);
 }
