--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -1,7 +1,15 @@
-.Footer{
-    background-color: aliceblue;
-    height: 170px;
-    padding-top: 20px;
-    color: gray;
+.footer-basic {
+    padding:20px 0;
+    background-color:#000000;
+    color:#4b4c4d;
     
-}
+  }
+  
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:#aaa;
+    margin-bottom:0;
+  }
