--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -1,9 +1,54 @@
 .About {
-    min-height:95vh;
-    background-color: azure;
+    min-height:80vh;
+    background-color:	#daded6;
+    background-image: url("https://thumbs.dreamstime.com/b/fondo-abstracto-de-pintura-al-%C3%B3leo-blanco-para-la-plantilla-dise%C3%B1o-partir-del-gr%C3%A1fico-vons-se-puede-usar-presentaci%C3%B3n-238879263.jpg");
 }
 
+.About .content{
+    background-color:#daded6;
+    justify-content: center;
+    display: flex;
+   
+}
 .About h1{
-    text-align: center;
+    font-weight: bolder;
+    text-shadow: 5PX 5PX 10PX black;
+}
+.box{
+    background-color:#daded6;
     color: black;
+    border-left:8px solid black;
+    border-right:8px solid black;
+    border-top:8px solid black;
+    border-bottom:4px solid black;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5px;
+}
+.box h1{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 36px;
+    font-weight: bold;
+}
+.box h2{
+    font-size: 24px;
+   text-align: left;
+
+    
+    margin-left: 10px;
+}
+.box p{
+    font-size: 16px;
+    line-height: 1.5;
+    margin-left: 10px;
+    text-align: left;
+}
+.box h3{
+    margin-bottom: 50px;
+    text-align: center;
+    
+}
+button{
+    margin-bottom: 10px;
 }
