--- a/src/pages/styles/catalog.css
+++ b/src/pages/styles/catalog.css
@@ -1,6 +1,7 @@
 .catalog{
-    background-color: bisque;
-    margin-bottom: 20px;
+    background-image: url("https://thumbs.dreamstime.com/b/fondo-abstracto-de-pintura-al-%C3%B3leo-blanco-para-la-plantilla-dise%C3%B1o-partir-del-gr%C3%A1fico-vons-se-puede-usar-presentaci%C3%B3n-238879263.jpg");
+    
+    min-height:80vh;
 }
 button{
     background-color: black;
