--- a/src/pages/styles/home.css
+++ b/src/pages/styles/home.css
@@ -1,8 +1,78 @@
 .Home{
-    background-color: aquamarine;
+    background-image: url("https://thumbs.dreamstime.com/b/fondo-abstracto-de-pintura-al-%C3%B3leo-blanco-para-la-plantilla-dise%C3%B1o-partir-del-gr%C3%A1fico-vons-se-puede-usar-presentaci%C3%B3n-238879263.jpg");
+    min-height:80vh;
+    
 }
-.Home{
+.headers{
+   
+    background-image: linear-gradient(to top, #ffce00 50%, transparent 50%);
+    background-size: 100% 200%;
+    background-position: top;
+    transition: background-position 0.1s ease-in;
+}
+.headers:hover{
+    background-position:bottom;
+    color: black;
+}
+
+.boxH{
+    background-color:#daded6;
+    color: black;
+    border-left:8px solid black;
+    border-right:8px solid black;
+    border-top:8px solid black;
+    border-bottom:4px solid black;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.boxH h1{
     text-align: center;
-    margin-top: 20px;
     margin-bottom: 20px;
+    font-size: 36px;
+    font-weight: bold;
 }
+.boxH h2{
+    font-size: 24px;
+   text-align: left;
+
+    
+    margin-left: 10px;
+}
+.boxH p{
+    font-size: 16px;
+    line-height: 1.5;
+    margin-left: 10px;
+    text-align: left;
+}
+.boxH h3{
+    margin-bottom: 50px;
+    text-align: center;
+    
+}
+.info{
+    background-color: #daded6;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 10px; 
+   border-top: 4px solid black;
+   border-left: 8px solid black;
+   border-right: 8px solid black; 
+}
+.info h2{
+    font-size: 24px;
+   text-align: left;
+    font-weight: bold;
+    margin-left: 10px;
+}
+.cards{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #daded6;
+    
+    padding-left: 10%;
+    padding-right: 10%;
+    padding: 10px;
+}
+
+
